<resources>
    <string name="app_name">GeoDetective</string>
    <string name="app_welcome">Welcome to GeoDetective!</string>
    <string name="logo">GeoDetective</string>
    <string name="password">Password</string>
    <string name="trusted">Creator Permission</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="createQuest">Create a Quest!</string>
    <string name="goOnQuest">Go on a Quest!</string>
    <string name="chooseQuest">Choose Image</string>
    <string name="questName">Quest Name</string>
    <string name="submitQuest">Submit Quest</string>
    <string name="saveQuest">Save Quest</string>
    <string name="questDescription">Quest Description</string>
    <string name="questHint">Quest Hint (Optional)</string>
    <string name="Back">Back</string>
    <string name="myText">myText</string>
    <string name="changeUsername">Change Username</string>
    <string name="inputNewUsername">New Username</string>
    <string name="applyNewUsername">Apply Change</string>
    <string name="changePass">Change Password</string>
    <string name="enterOldPass">Enter Old Password</string>
    <string name="enterNewPass">Enter New Password</string>
    <string name="oldPass">Old Password</string>
    <string name="newPass">New Password</string>
    <string name="signup">Signup</string>
    <string name="applyNewPass">Apply Change</string>
    <string name="create_account">Create Account</string>
    <string name="password_again">Password Again</string>
    <string name="imageClue"><i>Image Clue:</i></string>
    <string name="hintQuest">Get Hint</string>
    <string name="checkResult">Start quest</string>
    <string name="applyChange">Apply Change</string>
    <string name="profInfo">Profile Info</string>
    <string name="blank"> </string>
    <string name="editProf">Edit Profile</string>
    <string name="history">History</string>
    <string name="permission">Request Create Permission</string>
    <string name="delete">Delete Profile</string>
    <string name="editChooseQuest">Choose New Image</string>
    <string name="editQuestName">Edit Quest Name</string>
    <string name="editSubmitQuest">Submit Edited Quest</string>
    <string name="editQuestDescription">Edit Quest Description</string>
    <string name="editQuestHint">Edit Quest Hint</string>
    <string name="deleteQuest">Delete Quest</string>
    <string name="cameraPermissions">Camera permission</string>
    <string name="galleryPermissions">Gallery permission</string>
    <string name="SwitchString">Switch</string>


</resources>