<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/geo_green"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_welcome"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Login_Username"
        app:layout_constraintTop_toBottomOf="@+id/Login_Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/Login_Logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/Login_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#004D40"
        app:layout_constraintBottom_toTopOf="@id/Login_Btn"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/Login_Username" />

    <EditText
        android:id="@+id/Login_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#004D40"
        app:layout_constraintBottom_toTopOf="@+id/Login_Password"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/Login_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/geo_green_darker"
        android:text="@string/login"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/Register_Btn"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/Login_Password" />

    <Button
        android:id="@+id/Register_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/geo_green_darker"
        android:text="@string/register"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/Login_Btn"
        app:layout_constraintTop_toBottomOf="@+id/Login_Password" />


</androidx.constraintlayout.widget.ConstraintLayout>