<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/geo_green"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/Quest_Image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/quest_name_input"
        app:layout_constraintEnd_toEndOf="@+id/quest_name_input"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/quest_name_input"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/choose_Quest_Image_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/geo_green_darker"
        android:text="@string/chooseQuest"
        android:textColor="#000000"
        android:textSize="20sp"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/quest_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Quest_Image"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/quest_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:backgroundTint="@color/geo_green_darker"
        android:hint="@string/questName"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/quest_description_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_Quest_Image_Btn" />

    <EditText
        android:id="@+id/quest_description_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:backgroundTint="@color/geo_green_darker"
        android:hint="@string/questDescription"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/quest_hint_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quest_name_input" />

    <EditText
        android:id="@+id/quest_hint_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:backgroundTint="@color/geo_green_darker"
        android:hint="@string/questHint"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/submit_quest_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quest_description_input" />

    <Button
        android:id="@+id/submit_quest_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/geo_green_darker"
        android:text="@string/submitQuest"
        android:textColor="#000000"
        android:textSize="20sp"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/quest_name_input"
        app:layout_constraintStart_toStartOf="@+id/quest_name_input"
        app:layout_constraintTop_toBottomOf="@+id/quest_name_input" />
</androidx.constraintlayout.widget.ConstraintLayout>