<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/geo_green"
    tools:context=".activities.HomeActivity">


    <ImageView
        android:id="@+id/Logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/Play_Quest_Btn"
        app:layout_constraintEnd_toEndOf="@+id/Play_Quest_Btn"
        app:layout_constraintStart_toStartOf="@+id/Play_Quest_Btn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/Play_Quest_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/geo_green_darker"
        android:text="@string/goOnQuest"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Create_Quest_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Logo" />

    <Button
        android:id="@+id/Create_Quest_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/geo_green_darker"
        android:text="@string/createQuest"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Play_Quest_Btn"
        app:layout_constraintStart_toStartOf="@+id/Play_Quest_Btn"
        app:layout_constraintTop_toBottomOf="@+id/Play_Quest_Btn" />

    <ImageButton
        android:id="@+id/Profile_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/geo_green_darker"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/Logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/geo_green_darker"
        android:text="Log out"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ErrorTextHome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/ErrorTextHome2"
        app:layout_constraintEnd_toEndOf="@+id/Create_Quest_Btn"
        app:layout_constraintStart_toStartOf="@+id/Create_Quest_Btn"
        app:layout_constraintTop_toBottomOf="@+id/Play_Quest_Btn" />

    <TextView
        android:id="@+id/ErrorTextHome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/Create_Quest_Btn"
        app:layout_constraintEnd_toEndOf="@+id/Create_Quest_Btn"
        app:layout_constraintStart_toStartOf="@+id/Create_Quest_Btn"
        app:layout_constraintTop_toBottomOf="@+id/ErrorTextHome1" />

</androidx.constraintlayout.widget.ConstraintLayout>